deploy/prod/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gokub-tester
  labels:
    app: gokub-tester
spec:
  replicas: 2
  containers:
    - name: gokub-tester
      livenessProbe:
        httpGet:
          path: /prod/gokub/health
          port: 8080
        initialDelaySeconds: 3
        periodSeconds: 3
